ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/invalid/27_invalid_duplicate_param.lava
int f(int value, float value) {
  return 1;
}
